Fixed bug with Git Repository drop down not working if the code generators are disabled.

--- a/app/views/header/header.html
+++ b/app/views/header/header.html
@@ -98,7 +98,7 @@
       </ul>
     </div>
 
-    <div class="git-repo dropdown" ng-if="clients && !enableGitRepo">
+    <div class="git-repo dropdown" ng-if="!enableGitRepo">
        <button class="btn btn-default dropdown-toggle" type="button"
         data-toggle="dropdown" id="ClientMenu">
         Manage Git Repository
